[tool.poetry]
name = "pass-in-pyhton"
version = "0.1.0"
description = ""
authors = ["JuniorD-Isael <isaeldjunior@gmail.com>"]
readme = "README.md"
packages = [{include = "pass"}]

[tool.poetry.dependencies]
python = "^3.12"
greenlet = "3.0.3"
sqlalchemy = "2.0.31"


[tool.poetry.group.dev.dependencies]
iniconfig = "2.0.0"
packaging = "24.1"
pluggy = "1.5.0"
pytest = "8.2.2"
typing-extensions = "4.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
